Correction menu mobile grâce a overflow-x: hidden pour valider la soutenance

--- a/NathalieMota/assets/css/styles.css
+++ b/NathalieMota/assets/css/styles.css
@@ -36,6 +36,10 @@
     overflow: hidden;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 /*
     Police d'écriture
 */
